--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@ title: Home
 ---
 <h1>{{ "Hello World" | downcase}}</h1>
 
+Documenting my stuff, doing 80% of it wrong, people might get productive stuff out of it, or not.
