--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@ title: Projects
     <li>
       <h2><a href="{{ project.url }}">{{ project.name }}</a></h2>
       <h3>{{ project.status }}</h3>
-      <p>{{ project.content | markdownify }}</p>
+      <p>{{ project.excerpt | markdownify }}</p>
     </li>
    {% endfor %}
 </ul>
