--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 ---
 title: Home
 ---
-<h1>{{ "Hello World" | downcase}}</h1>
+<h1>@alg</h1>
 
-Documenting my stuff, doing 80% of it wrong, people might get productive stuff out of it, or not.
+<p>Documenting my work and projects, doing 80% of it wrong and 20% worst.<p>
+
+Social Media:
+@_blasian_young_adult
+@dronesandcalzones
+<br />
+Email: andre _at_ cocoonfirm _dot_ com
