--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 ---
 title: Projects
 ---
-<h1>Projects</h1>
+<h1>Quarter-of-the-way-Finished Projects</h1>
 
 <ul>
   {% for project in site.projects %}
