--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,8 @@ title: Blog
   {% for post in site.posts %}
   <li>
     <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+    <h5>{{ post.subtitle }}</h5>
+    {{ post.date | date_to_string }}
     <p>{{ post.excerpt }}</p>
   </li>
   {% endfor %}
