--- a/cooking.html
+++ b/cooking.html
@@ -1,7 +1,7 @@
 ---
 title: Cooking
 ---
-<h1>Average Struggle Cooking Recipes</h1>
+<h1>Satisfactory Cooking Recipes</h1>
 
 {% for recipe in site.data.cooking %}
   <h2>{{ recipe.name }}</h2>
