--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ layout: home
 
 <a href="https://www.linkedin.com/in/gomesan/">LinkedIn</a><br />
 
-Email: andre@cocoonfirm.com<br />
+Email: andre@cocoon.build<br />
 
-Social Media: <a href="https://www.instagram.com/cocoonfirm/">@cocoonfirm</a> <a href="https://www.instagram.com/dronesandcalzones/?hl=bg">@dronesandcalzones</a>
+Social Media: <a href="https://www.instagram.com/cocoonfirm/">@cocoon.build</a> <a href="https://www.instagram.com/dronesandcalzones/?hl=bg">@dronesandcalzones</a>
 
-<h5>If you like to stay updated you can us RSS or input your informaiton below:</h5>
+<h5>If you like to stay updated you can us RSS or input your information below:</h5>
 <form accept-charset="UTF-8" action="http://localhost:3000" method="POST">
   <input type="email" name="email" placeholder="Your Email">
   <input type="text" name="name" placeholder="Your Name">
