Add new tab redirect on links

--- a/index.html
+++ b/index.html
@@ -5,16 +5,9 @@ layout: home
 
 <h4>I like to dabble in reading, coding and cooking.</h4>
 
-<a href="https://www.linkedin.com/in/gomesan/">LinkedIn</a><br />
+<p>If you see any errors or improvements either make a pull request on <a href="https://github.com/gomesac/gomesac.github.io" target="_blank" rel="noopener noreferrer">Github</a> or contact me</p>
+
+<a href="https://www.linkedin.com/in/gomesan/" target="_blank" rel="noopener noreferrer">LinkedIn</a><br />
 
 Email: andre@cocoon.build<br />
-
-Social Media: <a href="https://www.instagram.com/cocoonfirm/">@cocoon.build</a> <a href="https://www.instagram.com/dronesandcalzones/?hl=bg">@dronesandcalzones</a>
-
-<h5>If you like to stay updated you can us RSS or input your information below:</h5>
-<form accept-charset="UTF-8" action="http://localhost:3000" method="POST">
-  <input type="email" name="email" placeholder="Your Email">
-  <input type="text" name="name" placeholder="Your Name">
-  <input type="hidden" name="utf8" value="✓">
-  <button type="submit">Submit</button>
-</form>
+Social Media: <a href="https://www.instagram.com/cocoonfirm/" target="_blank" rel="noopener noreferrer">@cocoon.build</a> <a href="https://www.instagram.com/dronesandcalzones/?hl=bg" target="_blank" rel="noopener noreferrer">@dronesandcalzones</a>
