--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: home
 
 <h4>I like to dabble in reading, coding and cooking.</h4>
 
-<p>If you see any errors or improvements either make a pull request on <a href="https://github.com/gomesac/gomesac.github.io" target="_blank" rel="noopener noreferrer">Github</a> or contact me</p>
+<p>If you see any errors or improvements either make a pull request on <a href="https://github.com/gomesac/gomesac.github.io" target="_blank" rel="noopener noreferrer">Github</a> or feel free to contact me</p>
 
 <a href="https://www.linkedin.com/in/gomesan/" target="_blank" rel="noopener noreferrer">LinkedIn</a><br />
 
