--- a/cooking.html
+++ b/cooking.html
@@ -3,6 +3,8 @@ title: Cooking
 ---
 <h1>Satisfactory Cooking Recipes</h1>
 
+<p>Working recipes, hopefully will be good enough for my kids not to order takeout</p>
+
 {% for recipe in site.data.cooking %}
   <h2>{{ recipe.name }}</h2>
 {% endfor %}
