Change footer, add quote to home page

--- a/index.html
+++ b/index.html
@@ -11,3 +11,8 @@ layout: home
 
 Email: andre@cocoon.build<br />
 Social Media: <a href="https://www.instagram.com/cocoonfirm/" target="_blank" rel="noopener noreferrer">@cocoon.build</a> <a href="https://www.instagram.com/dronesandcalzones/?hl=bg" target="_blank" rel="noopener noreferrer">@dronesandcalzones</a>
+
+<br />
+<br />
+{% assign quote = site.data.quotes | first %}
+"{{ quote.content }}" - {{ quote.source }}
