Update quote to Ada

--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@ layout: home
 
 <p>If you see any errors or improvements either make a pull request on <a href="https://github.com/gomesac/gomesac.github.io" target="_blank" rel="noopener noreferrer">Github</a> or feel free to contact me</p>
 
+Contact Information </br>
+Email: andre@cocoon.build<br />
+Social Media: <a href="https://www.instagram.com/cocoonfirm/" target="_blank" rel="noopener noreferrer">@cocoon.build</a> <a href="https://www.instagram.com/dronesandcalzones/?hl=bg" target="_blank" rel="noopener noreferrer">@dronesandcalzones</a><br />
 <a href="https://www.linkedin.com/in/gomesan/" target="_blank" rel="noopener noreferrer">LinkedIn</a><br />
 
-Email: andre@cocoon.build<br />
-Social Media: <a href="https://www.instagram.com/cocoonfirm/" target="_blank" rel="noopener noreferrer">@cocoon.build</a> <a href="https://www.instagram.com/dronesandcalzones/?hl=bg" target="_blank" rel="noopener noreferrer">@dronesandcalzones</a>
-
-<br />
 <br />
 {% assign quote = site.data.quotes | first %}
-"{{ quote.content }}" - {{ quote.source }}
+"{{ quote.content }}" - <a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Ada_Lovelace"/>{{ quote.author }}</a>
