Improve homepage links

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@ layout: home
 ---
 <h2>Documenting my stuff.</h2>
 
-<h4>I like to dabble in reading, coding and cooking.</h4>
+<h4>I like to dabble in <a href="/books.html">reading</a>, <a href="/projects.html">coding</a> and <a href="/cooking.html">cooking</a>.</h4>
 
 <p>If you see any errors or improvements either make a pull request on <a href="https://github.com/gomesac/gomesac.github.io" target="_blank" rel="noopener noreferrer">Github</a> or feel free to contact me</p>
 
 Contact Information </br>
 Email: andre@cocoon.build<br />
 Social Media: <a href="https://www.instagram.com/cocoonfirm/" target="_blank" rel="noopener noreferrer">@cocoon.build</a> <a href="https://www.instagram.com/dronesandcalzones/?hl=bg" target="_blank" rel="noopener noreferrer">@dronesandcalzones</a><br />
-<a href="https://www.linkedin.com/in/gomesan/" target="_blank" rel="noopener noreferrer">LinkedIn</a><br />
+<a href="https://www.linkedin.com/in/gomesan/" target="_blank" rel="noopener noreferrer">LinkedIn Profile</a><br />
 
 <br />
 {% assign quote = site.data.quotes | first %}
