--- a/cooking.html
+++ b/cooking.html
@@ -6,5 +6,6 @@ title: Cooking
 <p>Working recipes, hopefully will be good enough for my kids not to order takeout</p>
 
 {% for recipe in site.data.cooking %}
-  <h2>{{ recipe.name }}</h2>
+  <h2 style="margin: 0">{{ recipe.name }}</h2>
+  <p>{{ recipe.rating }}</p>
 {% endfor %}
