--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@ layout: home
 
 <p>Website is in constant development. If you see any errors or improvements either make a pull request on <a href="https://github.com/gomesac/gomesac.github.io" target="_blank" rel="noopener noreferrer">Github</a> or feel free to contact me</p>
 
+Environment </br>
+X1 Carbon
+WSL
+Vim
+
 Contact Information </br>
 Email: andre@cocoon.build<br />
 Social Media: <a href="https://www.instagram.com/cocoonfirm/" target="_blank" rel="noopener noreferrer">@cocoon.build</a> <a href="https://www.instagram.com/dronesandcalzones/?hl=bg" target="_blank" rel="noopener noreferrer">@dronesandcalzones</a><br />
