--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 ---
 layout: home
 ---
-<h2>Documenting my stuff.</h2>
+<h2>Documenting my stuff because I&rsquo;ve learn from other&rsquo;s documentation.</h2>
 
-<h4>I like to dabble in <a href="/books.html">reading</a>, <a href="/projects.html">coding</a> and <a href="/cooking.html">cooking</a>.</h4>
+<h4>Dabbling in <a href="/books.html">reading</a>, <a href="/projects.html">coding</a> and <a href="/cooking.html">cooking</a>.</h4>
 
 <p>Website is in constant development. If you see any errors or improvements either make a pull request on <a href="https://github.com/gomesac/gomesac.github.io" target="_blank" rel="noopener noreferrer">Github</a> or feel free to contact me</p>
 
 Environment </br>
-X1 Carbon
-WSL
-Vim
-
+X1 Carbon </br>
+WSL</br>
+Vim</br>
+</br>
 Contact Information </br>
 Email: andre@cocoon.build<br />
 Social Media: <a href="https://www.instagram.com/cocoonfirm/" target="_blank" rel="noopener noreferrer">@cocoon.build</a> <a href="https://www.instagram.com/dronesandcalzones/?hl=bg" target="_blank" rel="noopener noreferrer">@dronesandcalzones</a><br />
