Home page update

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 ---
-<h2>Documenting my stuff because I&rsquo;ve learn from other&rsquo;s documentation.</h2>
+<h2>Documenting my stuff because I&rsquo;ve learn from others&rsquo; documentation.</h2>
 
 <h4>Dabbling in <a href="/books.html">reading</a>, <a href="/projects.html">coding</a> and <a href="/cooking.html">cooking</a>.</h4>
 
@@ -9,7 +9,7 @@ layout: home
 
 Environment </br>
 X1 Carbon </br>
-WSL</br>
+WSL2</br>
 Vim</br>
 </br>
 Contact Information </br>
