Update experiences on resume

--- a/resume.html
+++ b/resume.html
@@ -11,6 +11,7 @@ title: Resume
       </li>
       <li>{{ expereience.title}}</li>
       <li>{{ expereience.location}}</li>
+      <li>{{ expereience.link}}</li>
     </ul>
 {% endfor %}
 
