--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@ title: Resume
       </li>
       <li>{{ experience.title}}</li>
       <li>{{ experience.location}}</li>
-      <li><a href="{{experience.link}}">{{experience.link}}</a></li>
+      <li><a target="_blank" rel="noopener noreferrer"href="{{experience.link}}">{{experience.link}}</a></li>
     </ul>
 {% endfor %}
 
