Update css and broken links

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@ title: Home | Andre L. Gomes
 <p>Website is in constant development. If you see any errors or improvements either make a pull request on <a href="https://github.com/gomesac/gomesac.github.io" target="_blank" rel="noopener noreferrer">Github</a> or feel free to contact me</p>
 
 Contact Information </br>
-Email: andre@cocoon.build<br />
-Social Media: <a href="https://www.instagram.com/cocoon.build/" target="_blank" rel="noopener noreferrer">@cocoon.build</a> <a href="https://www.instagram.com/dronesandcalzones/?hl=bg" target="_blank" rel="noopener noreferrer">@dronesandcalzones</a><br />
+Email: andre at cocoon dot build<br />
+Instagram: <a href="https://www.instagram.com/cocoon.build/" target="_blank" rel="noopener noreferrer">@cocoon.build</a><br /> 
 <a href="https://www.linkedin.com/in/gomesan/" target="_blank" rel="noopener noreferrer">LinkedIn Profile</a><br />
 
 <br />
 {% assign quote = site.data.quotes | first %}
-"{{ quote.content }}" - <a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Ada_Lovelace"/>{{ quote.author }}</a>
+{{ quote.content }} 
+<br />
+- <a target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Ada_Lovelace"/>{{ quote.author }}</a>
