--- a/index.html
+++ b/index.html
@@ -1,21 +1,6 @@
 ---
 layout: home
 ---
-<h2>Documenting my stuff because I&rsquo;ve learn from others&rsquo; documentation.</h2>
-
 <h4>Dabbling in <a href="/books.html">reading</a>, <a href="/projects.html">coding</a> and <a href="/cooking.html">cooking</a>.</h4>
 
-<p>Website is in constant development. If you see any errors or improvements either make a pull request on <a href="https://github.com/gomesac/gomesac.github.io" target="_blank" rel="noopener noreferrer">Github</a> or feel free to contact me</p>
-
-<h4>Contact Information</h4>
-andre at cocoon dot build<br />
-<a href="https://www.instagram.com/cocoon.build/" target="_blank" rel="noopener noreferrer">@cocoon.build</a><br /> 
-<a href="https://www.linkedin.com/in/gomesan/" target="_blank" rel="noopener noreferrer">LinkedIn Profile</a><br />
-
-<br />
-{% assign quote = site.data.quotes | first %}
-<span class="quote">
-{{ quote.content }} 
-</span>
-<br />
-<span class="author">- {{ quote.author }}</span>
+<p>Website is in constant development. If you see any errors or improvements either make a pull request on <a href="https://github.com/gomesac/gomesac.github.io" target="_blank" rel="noopener noreferrer">Github</a> or feel free to contact me.</p>
