Update front page

--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@ layout: home
 ---
 <h4>Dabbling in <a href="/books.html">reading</a>, <a href="/projects.html">coding</a> and <a href="/cooking.html">cooking</a>.</h4>
 
-<p>Website is in constant development. If you see any errors or improvements either make a pull request on <a href="https://github.com/gomesac/gomesac.github.io" target="_blank" rel="noopener noreferrer">Github</a> or feel free to contact me.</p>
+<p>Website is in constant development. If you see any errors or improvements either make a <a href="https://github.com/gomesac/gomesac.github.io" target="_blank" rel="noopener noreferrer">pull request</a> or feel free to contact me.</p>
