Update styling and rating

--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@ title: Projects
   {% for project in site.projects %}
     <li>
       <h2><a href="{{ project.url }}">{{ project.name }}</a></h2>
-      <h3>{{ project.status }}</h3>
+      <p>{{ project.status }}</p>
       <p>{{ project.excerpt | markdownify }}</p>
     </li>
    {% endfor %}
